fix saving state, jumps

--- a/pages/global.css
+++ b/pages/global.css
@@ -33,6 +33,10 @@ body, html {
     border-bottom: 1px solid #FFF;
 }
 
+.textarea-input__date {
+
+}
+
 .history-text {
     font-size: 24px;
     line-height: 40px;
